Tests, log fix